fixed contact page functionality

--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="functionality.js"></script>
+    <!-- <script src="functionality.js"></script> -->
   </head>
 
  <!-- Navigation Bar -->
@@ -23,7 +23,7 @@
 <body>
   <div class="Contact">
     <div class="ContactForm">
-        <form action="mailto:colinhoolwerf@gmail.com" method="POST" enctype="multipart/form-data" name="emailform">
+        <form action="https://formsubmit.co/colinhoolwerf@gmail.com" method="POST">
           <label for="inputname">Name</label>
           <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name" required>
           <label for="inputcompany">Company</label>
