--- a/thankyou.html
+++ b/thankyou.html
@@ -19,25 +19,11 @@
   <a href="Contact.html" title="Contacts">Contact</a>
 </nav>
 
-<!-- Contact Page Body -->
+<!-- Thank You Page -->
 <body>
-  <div class="Contact">
-    <div class="ContactForm">
-        <form action="https://formsubmit.co/colinhoolwerf@gmail.com" method="POST">
-          <input type="hidden" name="_next" value="https://colinh58.github.io/Portfolio/thankyou.HTML">
-          <label for="inputname">Name</label>
-          <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name" required>
-          <label for="inputcompany">Company</label>
-          <input type="text" id="inputcompany" name="inputcompany" placeholder="Enter Your Company" required> 
-          <label for="inputemail">Email Address</label>
-          <input type="text" id="inputemail" name="inputemail" placeholder="Enter Your Email Address" required>
-          <label for="subject">Subject</label>
-          <input type="text" id="subject" name="subject" placeholder="Subject Line" required>
-          <label for="message">Message</label>
-          <textarea id="message" name="message" placeholder="Write your message..." style="height:200px" required></textarea>
-          <input type="submit" value="Submit">
-        </form>
-      </div>   
+  <div class="thankyou">
+    <h1>Thank you for reaching out! I'll get back to you soon!</h1>
+    <a href="index.html" title="Home Page">Return to Home</a>
   </div>
 
 <!-- Footer -->
