adjusted thankyou page formatting

--- a/thankyou.html
+++ b/thankyou.html
@@ -23,7 +23,9 @@
 <body>
   <div class="thankyou">
     <h1>Thank you for reaching out! I'll get back to you soon!</h1>
-    <a href="index.html" title="Home Page">Return to Home</a>
+  </div>
+  <div class="thankyou">
+    <a href="index.html" title="Home Page">Return to Home Page</a>
   </div>
 
 <!-- Footer -->
