quick tweak to contact page functionality

--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
   <div class="Contact">
     <div class="ContactForm">
         <form action="https://formsubmit.co/colinhoolwerf@gmail.com" method="POST">
-          <input type="hidden" name="_next" value="https://colinh58.github.io/Portfolio/thankyou.HTML">
+          <input type="hidden" name="_next" value="https://colinh58.github.io/Portfolio/thankyou.html">
           <label for="inputname">Name</label>
           <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name" required>
           <label for="inputcompany">Company</label>
