small punctuation adjustment to thankyou page

--- a/thankyou.html
+++ b/thankyou.html
@@ -22,7 +22,7 @@
 <!-- Thank You Page -->
 <body>
   <div class="thankyou">
-    <h1>Thank you for reaching out! I'll get back to you soon!</h1>
+    <h1>Thank you for reaching out, I'll get back to you soon!</h1>
   </div>
   <div class="thankyou">
     <a href="index.html" title="Home Page">Return to Home Page</a>
