added journal entry for the day

--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
           a short break, and got back to it at 1:30 pm for another hour. I had another appointment in the mid~late afternoon so I stopped there for the day. <br> 
           <em>(2 hrs - 71 hrs Total) (37% Complete - Goal 31%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 32: Sunday, July 11</u> <br> I spent about an hour working on my portfolio website, I made my contact page operational and removed the JS alert saying it was down. I 
+          started my first hour of Codecademy lessons at 7 pm, I went until 8 pm then took a short break. I sat back down at 8:30 pm and went for another hour. <br> 
+          <em>(2 hrs - 73 hrs Total) (38% Complete - Goal 32%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
