--- a/resume.html
+++ b/resume.html
@@ -21,17 +21,16 @@
 
 <!-- Resume Page Body -->
 <body>
-  <div class="Resume">
+  <div class="AboutSection">
     <h1><u>About</u></h1>
         <ul>
-            <li>I am a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
+            <li>I am an aspiring Full-Stack Developer, learning how to code from Codecademy, documentation, and YouTube tutorials.</li>
+            <li>I am currently a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
             payroll, facilities and general office support.</li>
-            <li>I am currently working through Codecademy's Full-Stack Developer PRO course and expect to be done by October 2021.</li>
-            <li>I am a graduate of East Field College in Mesquite, TX. I have an Associate's of Science with a focus in Biology.</li>
             <li>I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</li>
         </ul>
     </div>
-    <div class="Experience">
+    <div class="ExperienceSection">
         <h1><u>Experience</u></h1>
         <ul>
             <li><h2>Workplace Coordinator</h2></li>
@@ -75,6 +74,27 @@
                         </ul>
         </ul>
   </div>
+  <div class="EducationSection">
+    <h1><u>Education</u></h1>
+        <ul>
+            <li><h2>Eastfield College</h2></li>
+            <ul>
+                <li><h3>Associate of Arts and Sciences (AAS), Biology</h3></li>
+                    <li><h4>2007 - 2011</h4></li>
+            </ul>
+        </ul>
+    </div>
+    <div class="VolunteerSection">
+        <h1><u>Volunteer Experience</u></h1>
+            <ul>
+                <li><h2>Legacy Counseling Center, Inc.</h2></li>
+                <ul>
+                    <li><h3>Admin Support, General Labor</h3></li>
+                        <li><h4>July 2003 - Present</h4></li>
+                            <li>Event management support, general labor, and general office support.</li>
+                </ul>
+            </ul>
+        </div>
 
 <!-- Footer -->
   <footer>
