added journal entry for Monday July 12th and Tuesday July 13th

--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
           started my first hour of Codecademy lessons at 7 pm, I went until 8 pm then took a short break. I sat back down at 8:30 pm and went for another hour. <br> 
           <em>(2 hrs - 73 hrs Total) (38% Complete - Goal 32%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 33: Monday, July 12</u> <br> Time to code! I sat down at 7 pm, fired up the ol’ Codecademy, and went for an hour! After a 30 min break, I got back to it. This time from 
+          8:30 pm to 9:30 pm! Today was all about post and get requests and working with APIs. I also finally started the React lessons! <br> 
+          <em>(2 hrs - 75 hrs Total) (41% Complete - Goal 33%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day OFF: Tuesday, July 13</u> <br> Tuesdays are Off Days. <br> <em>(75 hrs Total) (41% Complete - Goal 33%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
