added daily entry

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
 
         <li> <u>Day OFF: Tuesday, July 13</u> <br> Tuesdays are Off Days. <br> <em>(75 hrs Total) (41% Complete - Goal 33%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <u>Day 34: Wednesday, July 14</u> <br> React! Finally! I started a little late, I sat down at 7:30 pm and went for an hour and a half. I was very excited to keep going but my 
+        allergies and post-work exhaustion were too much. I can’t wait for tomorrow! <br> <em>(1.5 hrs - 76.5 hrs Total) (41% Complete - Goal 34%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
