added daily entry

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
         <li><u>Day 34: Wednesday, July 14</u> <br> React! Finally! I started a little late, I sat down at 7:30 pm and went for an hour and a half. I was very excited to keep going but my 
         allergies and post-work exhaustion were too much. I can’t wait for tomorrow! <br> <em>(1.5 hrs - 76.5 hrs Total) (41% Complete - Goal 34%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 35: Thursday, July 15</u> <br> Time for more React! I knew I only had an hour tonight so I made sure to really focus. I started at 5:45 and went until 6:45, then had to 
+        leave. <br> <em>(1 hrs - 77.5 hrs Total) (42% Complete - Goal 35%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
