corrected entry for Day 12

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           work, I had an appointment at a dealership that lasted well into the evening. By the time I got home, it was already later than my usual bedtime. I spent 30 mins reading in 
           bed, then passed out. <br> <em>(0.5 hrs - 38 hrs Total) (13% Complete - Goal 11%)</em> </li>
         
-        <li> <u>Day 12: Friday, June 18</u> <br> I got a bit of a late start today. I started with an hour, got through a lesson then stopped for dinner. After an extended break I 
-          only had enough time to do another half an hour before bed. <br> <em>(1 hrs - 39 hrs Total) (13% Complete - Goal 12%)</em> </li>
+        <li> <u>Day 12: Friday, June 18</u> <br> Back at it. I was exhausted from a terrible night of sleep but I powered through as best as I could. I put in an hour and decided I would 
+          be better served to continue tomorrow after sleeping in. <br> <em>(1 hrs - 39 hrs Total) (13% Complete - Goal 12%)</em> </li>
         
         <li> <u>Day 13: Saturday, June 19</u> <br> I got a bit of a late start today. I started with an hour, got through a lesson then stopped for dinner. After an extended break I only 
           had enough time to do another half an hour before bed. <br> <em>(1.5 hrs - 40.5 hrs Total) (14% Complete - Goal 13%)</em> </li>
