added daily entry

--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
           and states. I sat back down at 3:30 pm and went for an hour, then took another break. 8 PM, time for another hour, and then I called it for the day! <br> 
           <em>(3.5 hrs - 82 hrs Total) (44% Complete - Goal 36%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 37: Saturday, July 17</u> <br> I started today at 3:30 PM, today’s first lesson was on the lifecycle of a React class component. I took an extended break at 4:30 PM to run 
+          errands. I sat back down after dinner at 7:30 PM and went for another hour. The second hour was mostly lessons about functional React components and hooks. So much nicer than 
+          writing classes! <br> <em>(2 hrs - 84 hrs Total) (45% Complete - Goal 37%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
                 
