--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
           errands. I sat back down after dinner at 7:30 PM and went for another hour. The second hour was mostly lessons about functional React components and hooks. So much nicer than 
           writing classes! <br> <em>(2 hrs - 84 hrs Total) (45% Complete - Goal 37%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 38: Sunday, July 18</u> <br> Today was a continuation of function components in React. My first hour, started at 7 PM, covered state setters and setting from previous 
+          states. At 8 PM I took a break. I was really struggling to understand what I was being taught, I felt like maybe seeing it in video form might help. So, I stopped at an hour of 
+          Codecademy lessons for the day and spent the rest of the evening watching React JS tutorials on youtube. <br> <em>(1 hrs - 85 hrs Total) (45% Complete - Goal 38%)</em> </li>
                 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
