updated daily entry

--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
           states. At 8 PM I took a break. I was really struggling to understand what I was being taught, I felt like maybe seeing it in video form might help. So, I stopped at an hour of 
           Codecademy lessons for the day and spent the rest of the evening watching React JS tutorials on youtube. <br> <em>(1 hrs - 85 hrs Total) (45% Complete - Goal 38%)</em> </li>
                 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 39: Monday, July 19</u> <br> During the workday, I squeezed a couple React tutorial videos in, I’m starting to feel better about it. I started Codecademy lessons tonight 
+          at 7:30 PM, I learned about useEffects, primarily, and how to use CSS in React. After an hour and a half, I stopped for the evening. I stopped a little early to watch more React 
+          tutorials on YouTube. <br> <em>(1.5 hrs - 86.5 hrs Total) (46% Complete - Goal 39%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
