--- a/index.html
+++ b/index.html
@@ -214,9 +214,12 @@
           at 7:30 PM, I learned about useEffects, primarily, and how to use CSS in React. After an hour and a half, I stopped for the evening. I stopped a little early to watch more React 
           tutorials on YouTube. <br> <em>(1.5 hrs - 86.5 hrs Total) (46% Complete - Goal 39%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day OFF: Tuesday, July 20</u> <br> Tuesdays are Off Days. <br> <em>(46% Complete - Goal 39%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 40: Wednesday, July 21</u> <br> Back at it! I started at 7 PM and took a break at 8 PM. Tonight’s first lesson was all about separating container and presentational 
+          components, organization and readability were the themes! The second lesson was about propTypes; validation and documentation! The final lesson covered in the first hour was on 
+          creating forms with React. At 8:30 PM I sat back down for another half hour, completing lessons until 9:00 PM. The second session was an introduction to Redux! 
+          <br> <em>(2 hrs - 88 hrs Total) (48% Complete - Goal 40%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
