added daily entry

--- a/index.html
+++ b/index.html
@@ -221,7 +221,9 @@
           creating forms with React. At 8:30 PM I sat back down for another half hour, completing lessons until 9:00 PM. The second session was an introduction to Redux! 
           <br> <em>(1.5 hrs - 88 hrs Total) (48% Complete - Goal 40%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 41: Thursday, July 22</u> <br> I started at 7:30 PM tonight for my first hour, by 8:30 PM I had learned about states, actions, reducers, pure functions, and how to store 
+          data in Redux. After a shower break, I sat back down at 9 PM and went for another hour, I learned about a dedicated Redux library and API! I wrapped up at 10 PM for the night! 
+          <br> <em>(2 hrs - 90 hrs Total) (48% Complete - Goal 41%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
