--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
           spent about an hour and a half watching tutorials and recaps and ultimately didn’t make any progress on Codecademy. 
           <br> <em>(0 hrs - 90 hrs Total) (48% Complete - Goal 42%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 43: Saturday, July 24</u> <br> I started my first hour at 2:45 PM today, in that first hour I learned about action creators, store/store.dispatch, and event listeners in 
+          Redux. I took a break then started my second hour at 4:30 PM. I learned about slices in Redux, completed a quiz, then a project where I finished setting up the cart for a fake 
+          online store. <br> <em>(2 hrs - 92 hrs Total) (49% Complete - Goal 43%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
