added daily entry

--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@
           Redux. I took a break then started my second hour at 4:30 PM. I learned about slices in Redux, completed a quiz, then a project where I finished setting up the cart for a fake 
           online store. <br> <em>(2 hrs - 92 hrs Total) (49% Complete - Goal 43%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 44: Sunday, July 25 (Over 50% Completed!)</u> <br> I knew I had a couple back to back appointments and events later in the day so I got an early start. I sat down at 9:30 
+          AM for my first hour. I had a chance a little bit later to squeeze in a second hour starting at 12:15 PM. Today’s lessons covered the React-Redux library and tying the two together. 
+          I also learned about the Redux Toolkit and played around with some of the functionality it has. <br> <em>(2 hrs - 94 hrs Total) (51% Complete - Goal 44%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
