added daily entry

--- a/index.html
+++ b/index.html
@@ -237,9 +237,11 @@
           AM for my first hour. I had a chance a little bit later to squeeze in a second hour starting at 12:15 PM. Today’s lessons covered the React-Redux library and tying the two together. 
           I also learned about the Redux Toolkit and played around with some of the functionality it has. <br> <em>(2 hrs - 94 hrs Total) (51% Complete - Goal 44%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 45: Monday, July 26</u> <br> I started at 7:30 PM, went for an hour then took a 30 min break. I started my second hour at 9 PM. Tonight I finished up the Redux lessons 
+          with testing in Redux and general Redux review. The next set of lessons was a return to git, I learned how to handle creating, deleting, and moving into branches as well as dealing 
+          with merge conflicts. After that I learned about cloning, fetching, and pushing with git! <br> <em>(2 hrs - 96 hrs Total) (54% Complete - Goal 45%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day OFF: Tuesday, July 27</u> <br> Tuesdays are Off Days. <br> <em>(54% Complete - Goal 45%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
