updated about section in preparation for August/Portfolio month!

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
   <!-- Coding Journal Preface -->
   <div class="AboutSetup">
     <h2>My Coding Journey</h2>
-      <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was really motivated! I was ready to 
-        change my career and learn a new skill. I primarily used Codecademy, but I also used YouTube to help me understand the more complex concepts. To help me stay focused and 
-        accountable I set a goal and kept a daily journal of my progress. My goal was to get to 100% completion in the Full-Stack Developer course on Codecademy in 100 days 
-        (excluding Tuesdays which was the only night I took off every week).</p>
-        <p>I’ve included that journal here!</p>
+      <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was really motivated! I was ready to change my 
+        career and learn a new skill. I primarily used Codecademy, but I also used YouTube to help me understand the more complex concepts.</p>
+      <p>To help me stay focused and accountable I set a goal and kept a daily journal of my progress. My goal was to achieve 1% progress in Codecademy’s Full-Stack Engineer Pro course per 
+        day, aiming for a 100% in 100 days of lessons. The goal wasn’t to do it in 100 consecutive days, however. I made sure to take the appropriate time to work on my portfolio, projects 
+        and include down time. I took one day off per week and I gave myself a full month between the Front-End and Back-End lessons to help solidify what I had been learning.</p>
+      <p>My goal timeline was to complete the Front-End section in June and July, then take August to build my portfolio and complete some projects. Then complete the Back-End section, 
+        thereby completing the Full-Stack program, in September and October. My Codecademy journey would then end on Halloween but my coding journey would have only just begun!</p>
+
+        <p>This is my coding journal!</p>
   </div>
   
   <!-- Coding Journal -->
@@ -48,7 +52,7 @@
           <em>(3 hrs - 3 hrs Total) (2% Complete - Goal 1%)</em> </li>
         
         <li> <u>Day 2: Sunday, June 6</u> <br>
-          I started today with two projects, one was a Rock, Paper, Scissors project. Both projects took an hour combined to complete. After a short break, I completed another hour, 
+          I started today with two assignments, one was a Rock, Paper, Scissors assignment. Both assignments took an hour combined to complete. After a short break, I completed another hour, 
           then took an extended break. I felt motivated to organize my thoughts and goals so I put my goals and plan into writing before finishing the day with 30 more minutes of 
           Codecademy. I also wound down the last 30 minutes of the day with the introduction and first chapter from the book HTML & CSS Design and Build Websites by Jon Duckett. <br>
           <em>(3 hrs - 6 hrs Total) (4% Complete - Goal 2%)</em> </li>
