added daily entry

--- a/index.html
+++ b/index.html
@@ -243,11 +243,15 @@
 
         <li> <u>Day 45: Monday, July 26</u> <br> I started at 7:30 PM, went for an hour then took a 30 min break. I started my second hour at 9 PM. Tonight I finished up the Redux lessons 
           with testing in Redux and general Redux review. The next set of lessons was a return to git, I learned how to handle creating, deleting, and moving into branches as well as dealing 
-          with merge conflicts. After that I learned about cloning, fetching, and pushing with git! <br> <em>(2 hrs - 96 hrs Total) (54% Complete - Goal 45%)</em> </li>
+          with merge conflicts. After that I learned about cloning, fetching, and pushing with git! This marked the end of the Front-End section of the Full-Stack program! 
+          <br> <em>(2 hrs - 96 hrs Total) (54% Complete - Goal 45%)</em> </li>
 
         <li> <u>Day OFF: Tuesday, July 27</u> <br> Tuesdays are Off Days. <br> <em>(54% Complete - Goal 45%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 46: Wednesday, July 28</u> <br> I started at 7:30 PM and went for an hour, took a 30 minute break, then did another hour starting at 9 PM. Having now completed all the 
+          Front-End lessons in the Full-Stack program I pivoted to completing all the incomplete and accessory Front-End specific courses. The first one I tackled was the last little bit of 
+          the dedicated Javascript course. The last lesson in that course was on babel and caniuse.com. Next I finished off the Build a Website and Intermediate CSS programs, which covered 
+          CSS transitions and variables. <br> <em>(2 hrs - 98 hrs Total) (54% Complete - Goal 46%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
