added daily entry

--- a/index.html
+++ b/index.html
@@ -253,7 +253,10 @@
           the dedicated Javascript course. The last lesson in that course was on babel and caniuse.com. Next I finished off the Build a Website and Intermediate CSS programs, which covered 
           CSS transitions and variables. <br> <em>(2 hrs - 98 hrs Total) (54% Complete - Goal 46%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 47: Thursday, July 29 (100 Hours!)</u> <br> I started my first hour tonight at 7:30 PM again. I continued to finish off the Front-End specific courses that the main 
+          program didn’t quite complete. The first hour covered web accessibility, readability, and color. I also completed a couple React lessons and quizzes before the hour was up. After 
+          a short break I sat back down for another hour at 9 PM, this time learning about navigation design and color design. 
+          <br> <em>(2 hrs - 100 hrs Total) (54% Complete - Goal 47%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
                 
