added daily entry

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           Redux. I took a break then started my second hour at 4:30 PM. I learned about slices in Redux, completed a quiz, then a project where I finished setting up the cart for a fake 
           online store. <br> <em>(2 hrs - 92 hrs Total) (49% Complete - Goal 43%)</em> </li>
 
-        <li> <u>Day 44: Sunday, July 25 (Over 50% Completed!)</u> <br> I knew I had a couple back to back appointments and events later in the day so I got an early start. I sat down at 9:30 
+        <li> <u>Day 44: Sunday, July 25 (50% Completed!)</u> <br> I knew I had a couple back to back appointments and events later in the day so I got an early start. I sat down at 9:30 
           AM for my first hour. I had a chance a little bit later to squeeze in a second hour starting at 12:15 PM. Today’s lessons covered the React-Redux library and tying the two together. 
           I also learned about the Redux Toolkit and played around with some of the functionality it has. <br> <em>(2 hrs - 94 hrs Total) (51% Complete - Goal 44%)</em> </li>
 
@@ -258,7 +258,8 @@
           a short break I sat back down for another hour at 9 PM, this time learning about navigation design and color design. 
           <br> <em>(2 hrs - 100 hrs Total) (54% Complete - Goal 47%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 48: Friday, July 30</u> <br> I started tonight at 7 PM, and went for an hour. In my first hour I learned about Bootstrap! After a shower break I sat back down for another 
+          hour at 8:30 PM and learned about Sass! <br> <em>(2 hrs - 102 hrs Total) (54% Complete - Goal 48%)</em> </li>
                 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
