added aug 1st through 5th entry

--- a/index.html
+++ b/index.html
@@ -266,61 +266,62 @@
           some courses that were at the end of the Full-Stack version I’ve been doing. I decided to save those for when I reached them in my Full-Stack curriculum. 
           <br> <em>(2 hrs - 104 hrs Total) (56% Complete - Goal 49%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Sunday, August 1 - Thursday, August 5</u> <br> Since I had been using just about all the free time and extra brain power I had in the last two months I decided to give myself 
+          4 days, and a date night, of break. I made sure to do daily quizzes on JS, Web Dev, and React in the Codecademy Go app but other than that I enjoyed some down time. </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Friday, August 6</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Saturday, August 7</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Sunday, August 8</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Monday, August 9</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Tuesday, August 10</u> <br> Tuesdays are Off Days. </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Wednesday, August 11</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Thursday, August 12</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Friday, August 13</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Saturday, August 14</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Sunday, August 15</u> <br> ENTRY </li> -->
                 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Monday, August 16</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Tuesday, August 17</u> <br> Tuesdays are Off Days. </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Wednesday, August 18</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Thursday, August 19</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Friday, August 20</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Saturday, August 21</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Sunday, August 22</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Monday, August 23</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Tuesday, August 24</u> <br> Tuesdays are Off Days. </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Wednesday, August 25</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Thursday, August 26</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Friday, August 27</u> <br> ENTRY </li> -->
                 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Saturday, August 28</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Sunday, August 29</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Monday, August 30</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Tuesday, August 31</u> <br> Tuesdays are Off Days. </li> -->
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Day 50: Wednesday, September 1</u> <br> ENTRY <br> <em>(X hrs - XX hrs Total) (X% Complete - Goal 50%)</em> </li> -->
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
