updated daily entry

--- a/index.html
+++ b/index.html
@@ -267,9 +267,15 @@
           <br> <em>(2 hrs - 104 hrs Total) (56% Complete - Goal 49%)</em> </li>
 
         <li> <u>Sunday, August 1 - Thursday, August 5</u> <br> Since I had been using just about all the free time and extra brain power I had in the last two months I decided to give myself 
-          4 days, and a date night, of break. I made sure to do daily quizzes on JS, Web Dev, and React in the Codecademy Go app but other than that I enjoyed some down time. </li>
+          4 days, and a date night, of break. I made sure to do daily quizzes on "Learn JavaScript", "Web Development", and "Create a Front-End App with React" in the Codecademy Go app but 
+          other than that I enjoyed some down time. </li>
 
-        <!-- <li> <u>Friday, August 6</u> <br> ENTRY </li> -->
+        <li> <u>Friday, August 6</u> <br> I had the day off from work, a company wide pandemic R&R thing. I took advantage of this opportunity to start hashing out my projects for the month. 
+          The first thing I did was decide on the React projects I wanted to attempt. I wanted to start off easy and ramp up so I planned on starting with a To Do List app and a Tic-Tac-Toe 
+          app. Then from there I would create a Stock/Crypto Tracker and a Yelp! app that helps you find nearby, highly reviewed, restaurants (I made a list of 9 projects in total just in case 
+          I had more time). Now that I had my list I was ready to start my first React app! After spending time trying to get an extremely basic React app embedded in my existing website (to 
+          then start building my first app) I decided to create a new repo on github and link to it from my website instead. After starting a new repo I spent the remainder of the day working 
+          on the To Do List app! </li>
 
         <!-- <li> <u>Saturday, August 7</u> <br> ENTRY </li> -->
 
