added daily entry

--- a/index.html
+++ b/index.html
@@ -277,7 +277,10 @@
           then start building my first app) I decided to create a new repo on github and link to it from my website instead. After starting a new repo I spent the remainder of the day working 
           on the To Do List app! </li>
 
-        <!-- <li> <u>Saturday, August 7</u> <br> ENTRY </li> -->
+        <li> <u>Saturday, August 7</u> <br> After severely struggling with the ToDoList app yesterday, I spoke with my web dev friend about it and where/why I was struggling. I had almost 
+          immediately resorted to a code along for help. He suggested that I was trying to do too much too quickly and that I break it down to baby steps and work my way up very slowly and 
+          carefully. So that was the goal for today! I started a fresh new repo and react app and started over with the goal of googling and youtubing first, and looking at the code along 
+          code as a last resort. </li>
 
         <!-- <li> <u>Sunday, August 8</u> <br> ENTRY </li> -->
 
