updated twitter link, removed Insta/Interests Page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="index.html" title="Home Page">Home</a>
   <a href="resume.html" title="Resume">Resume</a>
   <a href="Projects.html" title="Projects">Projects</a>
-  <a href="Interests.html" title="Interests">Interests</a>
+  <!-- <a href="Interests.html" title="Interests">Interests</a> -->
   <a href="Contact.html" title="Contacts">Contact</a>
 </nav>
 
@@ -277,7 +277,7 @@
           then start building my first app) I decided to create a new repo on github and link to it from my website instead. After starting a new repo I spent the remainder of the day working 
           on the To Do List app! </li>
 
-        <li> <u>Saturday, August 7</u> <br> After severely struggling with the ToDoList app yesterday, I spoke with my web dev friend about it and where/why I was struggling. I had almost 
+        <li> <u>Saturday, August 7</u> <br> After struggling with the ToDoList app yesterday, I spoke with my web dev friend about it and where/why I was struggling. I had almost 
           immediately resorted to a code along for help. He suggested that I was trying to do too much too quickly and that I break it down to baby steps and work my way up very slowly and 
           carefully. So that was the goal for today! I started a fresh new repo and react app and started over with the goal of googling and youtubing first, and looking at the code along 
           code as a last resort. </li>
@@ -407,8 +407,8 @@
     <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
     <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
     <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
-    <a href="https://twitter.com/Inukshuk58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
+    <!-- <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a> -->
+    <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
   </footer>
 </body>
 </HTML>
