--- a/Interests.html
+++ b/Interests.html
@@ -15,7 +15,7 @@
   <a href="index.html" title="Home Page">Home</a>
   <a href="resume.html" title="Resume">Resume</a>
   <a href="Projects.html" title="Projects">Projects</a>
-  <a href="Interests.html" title="Interests">Interests</a>
+  <!-- <a href="Interests.html" title="Interests">Interests</a> -->
   <a href="Contact.html" title="Contacts">Contact</a>
 </nav>
 
@@ -30,8 +30,8 @@
     <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
     <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
     <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
-    <a href="https://twitter.com/Inukshuk58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
+    <!-- <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a> -->
+    <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
   </footer>
 </body>
 </HTML>
